[package]
name = "melog"
version = "0.1.0"
edition = "2024"


[dependencies]
dotenvy = "0.15.7"
thiserror = "2"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
twilight-gateway = "0.16"
twilight-http = "0.16"
twilight-model = "0.16"
twilight-util = "0.16"

[profile.test]
debug = 2

[profile.dev]
debug = 2

[profile.release]
debug = 1

[profile.bench]
debug = 1
